[package]
name = "dognut_cli_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"

[dependencies]
protobuf = "3.2.0"
log = "0.4.*"
pixels = "*"
winit_input_helper = "0.*"
winit = "0.*"
tokio = {version="1", features=["full"]}
ffmpeg-next = "5.*"
crossbeam-channel = {version = "0.5.*"} # for thread synchronize
bytes = "1.4.0"
image = "0.24.5"
