[package]
name = "dognut_cli_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#name="dognut_cli_lib"
crate-type = ["lib","cdylib"]

[[bin]]
name = "main"
required-features = ["example"]

[dependencies]
crossterm = "=0.25.0"
proc-macro2="=1.0.65"
protobuf = "3.2.0"
log = "0.4.*"
pixels = {version = "=0.10.0", optional = true}
winit_input_helper = {version="0.*", optional = true}
winit = {version ="=0.27.5", optional=true}
tokio = {version="1", features=["full"]}
ffmpeg-next = {version="5.*", optional = true}
crossbeam-channel = {version = "0.5.*"} # for thread synchronize
turbojpeg = {version="0.5.2"}
bytes = "1.4.0"
image = "0.24.5"
env_logger = "0.9"
#flutter_rust_bridge = "1.64.0"
bitflags = "*"
libc = "*"

[features]
rtc = ["dep:ffmpeg-next"]
example = ["dep:pixels", "dep:winit", "dep:winit_input_helper"]
